<tabs>
    <tab
        id="@+id/menu_map"
        icon="@drawable/baseline_person_pin_black_24"
        title="@string/map" />
    <tab
        id="@+id/menu_family"
        icon="@drawable/baseline_group_24"
        title="@string/family" />
    <tab
        id="@+id/menu_profile"
        icon="@drawable/baseline_person_24"
        title="@string/profile" />
</tabs>
