<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:background="@color/layout_background"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="RtlSymmetry">

    <RelativeLayout
        android:id="@+id/user_info_common"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_user_image"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_height="200dp"
            android:gravity="top"
            android:src="@drawable/profile_small"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp" />

        <EditText
            android:id="@+id/user_text_name"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/profile_user_image"
            android:adjustViewBounds="true"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingEnd="15dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:scaleType="centerCrop"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:textSize="20sp" />

        <ru.shtrm.familyfinder.util.IconTextView
            android:id="@+id/user_location_icon"
            android:layout_width="36dp"
            android:layout_height="50dp"
            android:layout_below="@+id/user_text_name"
            android:layout_marginStart="20dp"
            android:text="@string/icon_map_marker"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/user_text_location"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/user_text_name"
            android:layout_toEndOf="@+id/user_location_icon"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_text_location_label"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/user_text_location"
            android:layout_toEndOf="@+id/user_location_icon"
            android:paddingStart="20dp"
            android:text="@string/current_location"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <ru.shtrm.familyfinder.util.IconTextView
            android:id="@+id/email_icon"
            android:layout_width="36dp"
            android:layout_height="50dp"
            android:layout_below="@+id/user_text_location_label"
            android:layout_marginStart="20dp"
            android:text="@string/icon_email"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/user_text_location_label"
            android:layout_toEndOf="@+id/email_icon"
            android:paddingStart="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email_text_label"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/email_text"
            android:layout_toEndOf="@+id/email_icon"
            android:paddingStart="20dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>